--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
+  }
+
+*{
   font-family: "Inter", sans-serif;
 }
-
 // code {
 //   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
 //     monospace;
@@ -23,52 +25,67 @@ border-radius: 20px;
 header{
   padding: 40px;
   border-bottom: 1px solid #dadcdd;
-  img{
-    margin-right: 15px;
-  }
 
-  h3, p{
-    margin: 0;
-  }
+    img{
+      margin-right: 15px;
+    }
 
-  ul li {
-    margin-right: 30px;
-  }
-  h3{
-    text-transform: uppercase;
-  }
-  .header-title{
-    opacity: .5;
-  }
+    h3, p{
+      margin: 0;
+    }
+
+    ul li {
+      margin-right: 30px;
+    }
+    h3{
+      text-transform: uppercase;
+    }
+    .header-title{
+      opacity: .5;
+    }
  }
 
- .content{
-  padding: 40px;
-  h1{
-    margin-bottom: 40px;
-  }
- }
+//  .content{
+  // padding: 40px;
+  // h1{
+  //   margin-bottom: 40px;
+  // }
+//  }
 
  .card{
   border: 1px solid #dadcdd;
   padding: 30px;
-  margin: 10px;
+  margin: 25px 10px;
   width:  220px;
   border-radius: 40px;
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+  // cursor: pointer;
 
-  h5{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.2rem;
-  }
-  span{
-    text-transform: uppercase;
-    opacity: .5;
-    font-size: 13px;
-  }
-  b{
-    font-size: 14px;
-  }
+    &:hover{
+      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.05);
+      transform: translateY(-5px);
+    }
+
+    h5{
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.2rem;
+    }
+
+    span{
+      text-transform: uppercase;
+      opacity: .5;
+      font-size: 13px;
+    }
+
+    b{
+      font-size: 14px;
+    }
+
+    .favorite{
+      position: absolute;
+      cursor: pointer;
+    }
  }
 
  .button{
@@ -80,8 +97,177 @@ header{
   width: 32px;
   cursor: pointer;
  }
- 
+
  .goods{
   display: flex;
   flex-wrap: wrap;
  }
+
+ .search-block{
+  border: 1px solid #dadcdd ;
+  display: flex;
+  border-radius: 15px;
+  padding: 0 15px;
+
+  input{
+    width: 200px;
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+  }
+ }
+
+// cart section
+ .overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+ }
+
+ .drawer{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  width: 420px;
+  height: 100%;
+  right: 0;
+  background: #FFFFFF;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.01);
+  padding: 30px;
+
+    h2{
+      margin: 30px 0;
+
+      img{
+        cursor: pointer;
+      }
+    }
+
+    .items{
+      flex:1;
+      overflow: auto;
+      margin-bottom: 40px;
+    }
+
+    .cart-item{
+      display: flex;
+      align-items: center;
+      border: 1px solid #f3f3f3;
+      border-radius: 20px;
+      // overflow: hidden;
+      padding: 5px;
+      margin-bottom: 20px;
+
+      .cart-img{
+        margin-right: 20px;
+        margin-bottom: 10px;
+        // height: 770px;
+        // width: 70px;
+        // background-size: contain;
+        // background-position: 0 10px;
+        // background-repeat: no-repeat;
+        // margin-right: 20px;
+
+      }
+      .cart-alias-goods{
+        margin-bottom: 5px;
+        font-size: 16px;
+      }
+
+      .cart-alias-block{
+        margin-right: 20px;
+        line-height: 1.2rem;
+      }
+
+      b{
+        font-size: 14px;
+      }
+
+      .cart-item-remove-btn{
+        opacity: .7;
+        cursor: pointer;
+        transition: opacity 0.15s ease-in-out;
+
+        &:hover{
+          opacity: 1;
+        }
+      }
+    }
+
+    .cart-total-block{
+
+      ul{ 
+        margin-bottom: 40px !important;
+      }
+
+      li{
+        display: flex;
+        align-items: flex-end;
+        margin-bottom: 20px;
+      }
+
+      span{
+      //   padding: 0;
+        margin: -5px;
+      }
+
+      div{
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dadcdd;
+        position: relative;
+        top: -4px;
+        margin: 0 7px;
+      }
+
+      .green-button{
+        position: relative;
+        // transition: transform 0.2s ease-in-out;
+        &:hover{
+          img{
+            transform: translateX(5px);
+          }
+        }
+
+        img{
+          position: absolute;
+          right: 30px;
+          top:20px;
+          transition: transform 0.15s ease-in-out;
+        }
+      }
+
+    }   
+  }
+ 
+ .green-button{
+  width: 100%;
+  height: 55px;
+  border-radius: 15px;
+  background: #9dd558;
+  color: #FFFFFF;
+  border: 0;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 10px;
+  cursor: pointer;
+  transition: background 0.2s ease-in-out;
+
+  &:hover{
+    // background: lighten(#9dd558, 5%);
+    background: #b6f766;
+      }
+
+  &:active{
+    // background: darken(#9dd558, 5%);
+    background: #6c963a;
+// background: color.scale($color, $lightness: -8.4717607973%),
+// color.adjust($color, $lightness: -5%);
+  }
+}
+
+// next section
