--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,10 @@ header{
   padding: 40px;
   border-bottom: 1px solid #dadcdd;
 
+  .cart-img{
+    cursor: pointer;
+  }
+
     img{
       margin-right: 15px;
     }
@@ -61,10 +65,14 @@ header{
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
   // cursor: pointer;
 
-    &:hover{
-      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.05);
-      transform: translateY(-5px);
-    }
+  .plus{
+    cursor: pointer;
+  }
+
+  &:hover{
+    box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.05);
+    transform: translateY(-5px);
+  }
 
     h5{
       font-weight: 400;
