--- a/src/index.scss
+++ b/src/index.scss
@@ -116,13 +116,24 @@ header{
   display: flex;
   border-radius: 15px;
   padding: 0 15px;
+  position: relative;
 
-  input{
-    width: 200px;
-    border: 0;
-    padding: 13px;
-    font-size: 16px;
-  }
+    input{
+      width: 200px;
+      border: 0;
+      padding: 13px;
+      font-size: 16px;
+    }
+    .clear{
+      position: absolute;
+      right: 0;
+      width: 20px;
+      height: 20px;
+      top: 20px;
+      right: 10px;
+      cursor: pointer;
+
+    }
  }
 // cart section
  .overlay{
@@ -146,6 +157,24 @@ header{
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.01);
   padding: 30px;
 
+  .greenButtonEmpty {
+      width: 245px;
+      margin-top: 20px;
+
+      &:hover {
+        img {
+          transform:  translateX(-3px);
+        }
+      }
+
+      img {
+        position: relative;
+        top: 1px;
+        margin-right: 15px;
+        transition: transform 0.15s ease-in-out;
+      }
+    }
+
     h2{
       margin: 30px 0;
 
@@ -159,6 +188,22 @@ header{
       overflow: auto;
       margin-bottom: 40px;
     }
+    
+    .cartEmpty {
+      text-align: center;
+
+    p {
+      width: 280px;
+      line-height: 24px;
+    }
+
+    .empty-cart-text{
+      text-align: center;
+    }
+    
+  }
+
+    
 
     .cart-item{
       display: flex;
